--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432  
 DATABASE_NAME=reseller_ssa
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=ssa@123
+DATABASE_PASSWORD=fsociety
 DATABASE_SSL_SELF=false
