--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "razorpay": "^2.8.3",
     "strapi-plugin-custom-links": "^0.2.1",
     "strapi-plugin-fcm": "^1.0.7",
-    "strapi-plugin-random-sort": "^0.0.3"
+    "strapi-plugin-random-sort": "^0.0.3",
+    "xlsx": "^0.18.5"
   },
   "author": {
     "name": "Ronak Thakkar"
