--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST=143.110.191.246
+HOST=64.227.180.236
 PORT=1337
 APP_KEYS=GxcM3chIIvS4GjqFW+5UtA==,WnTUZdHsy+oB7L9jMUAFJQ==,6T4Gxhap8Noz2084k0Ftdw==,bm+1SCQeiVy9b55bRVcK5w==
 API_TOKEN_SALT=mcSs/Zv4GPmzXLvTQAuXgQ==
@@ -6,7 +6,7 @@ ADMIN_JWT_SECRET=C7LTQp8a/yPNR/IH53SRpA==
 JWT_SECRET=dLAtcYB8yzM/ibWobJSG0g==
 DATABASE_HOST=localhost
 DATABASE_PORT=5432  
-DATABASE_NAME=reseller_ssa
-DATABASE_USERNAME=resellerssa
-DATABASE_PASSWORD=resellerssa123
+DATABASE_NAME=sumit_db
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=sumit@123
 DATABASE_SSL_SELF=false
