--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mustache": "^4.2.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "p-limit": "^3.0.0",
     "pg": "^8.8.0",
     "puppeteer": "^20.7.2",
     "razorpay": "^2.8.3",
