--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ssa-reseller",
+  "name": "arham_watches",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "A Reseller application",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
