--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ DATABASE_NAME=sumit_db
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=sumit@123
 DATABASE_SSL_SELF=false
+RZP_WRAPPER_URL=http://64.227.147.124:1337/api
