added admin-sub in global-brand

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ DATABASE_NAME=arhamwatches_db
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=arham@123
 DATABASE_SSL_SELF=false
+MSG91_TEMPLATE_ID=6523e2b9d6fc05698f1631e3
+MSG91_AUTH_KEY=275588AIHmHWVyjtu5cd18c59
+RZP_WRAPPER_URL=http://64.227.147.124:1337/api
