--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "googleapis": "^109.0.1",
     "joi": "^17.7.0",
     "mustache": "^4.2.0",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "p-limit": "^3.0.0",
