added msg91_auth in env,text_color in global brand

--- a/.env
+++ b/.env
@@ -4,12 +4,13 @@ APP_KEYS=GxcM3chIIvS4GjqFW+5UtA==,WnTUZdHsy+oB7L9jMUAFJQ==,6T4Gxhap8Noz2084k0Ftd
 API_TOKEN_SALT=mcSs/Zv4GPmzXLvTQAuXgQ==
 ADMIN_JWT_SECRET=C7LTQp8a/yPNR/IH53SRpA==
 JWT_SECRET=dLAtcYB8yzM/ibWobJSG0g==
+ENVIRONMENT=PROD
 DATABASE_HOST=localhost
 DATABASE_PORT=5432  
 DATABASE_NAME=arhamwatches_db
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=arham@123
 DATABASE_SSL_SELF=false
-MSG91_OTP_TEMPLATE_ID=6523e2b9d6fc05698f1631e3
+MSG91_OTP_TEMPLATE_ID=656ec220d6fc0550c2082f12
 MSG91_AUTH_KEY=275588AIHmHWVyjtu5cd18c59
 RZP_WRAPPER_URL=http://64.227.147.124:1337/api
