--- a/.env
+++ b/.env
@@ -1,13 +1,16 @@
-HOST=165.22.214.119
+HOST=64.227.180.236
 PORT=1337
 APP_KEYS=GxcM3chIIvS4GjqFW+5UtA==,WnTUZdHsy+oB7L9jMUAFJQ==,6T4Gxhap8Noz2084k0Ftdw==,bm+1SCQeiVy9b55bRVcK5w==
 API_TOKEN_SALT=mcSs/Zv4GPmzXLvTQAuXgQ==
 ADMIN_JWT_SECRET=C7LTQp8a/yPNR/IH53SRpA==
 JWT_SECRET=dLAtcYB8yzM/ibWobJSG0g==
+ENVIRONMENT=PROD
 DATABASE_HOST=localhost
 DATABASE_PORT=5432  
-DATABASE_NAME=arhamwatches_db
+DATABASE_NAME=sumit_db
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=arham@123
+DATABASE_PASSWORD=sumit@123
 DATABASE_SSL_SELF=false
+MSG91_OTP_TEMPLATE_ID=656ec220d6fc0550c2082f12
+MSG91_AUTH_KEY=275588AIHmHWVyjtu5cd18c59
 RZP_WRAPPER_URL=http://64.227.147.124:1337/api
