modified orders checkout and verify

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arham_watches",
+  "name": "sumeet_online",
   "private": true,
   "version": "0.1.0",
   "description": "A Reseller application",
